# micro-javascript

./: .gitignore  AGENTS.md  LICENSE  README.md  open-problems.md  parser-playground.html  playground.html  pyproject.toml  spec.md  spec.py
.github/workflows/: publish.yml  test.yml
docs/: regex.md
src/microjs/: __init__.py  ast_nodes.py  compiler.py  context.py  errors.py  lexer.py  opcodes.py  parser.py  values.py  vm.py
src/microjs/regex/: __init__.py  compiler.py  opcodes.py  parser.py  regex.py  vm.py
src/mquickjs_python/: __init__.py  ast_nodes.py  compiler.py  context.py  errors.py  lexer.py  opcodes.py  parser.py  tokens.py  values.py  vm.py
src/mquickjs_python/regex/: __init__.py  compiler.py  parser.py  regex.py  vm.py
tests/: conftest.py  test_arrow_functions.py  test_basic.py  test_builtin.js  test_builtin_funcs.py  test_compatibility.py  test_function_methods.py  test_js_basic.py  test_jscontext_regexp.py  test_known_issues.py  test_lexer.py  test_parser.py  test_readme.py  test_rect.py  test_regex.py  test_string_regex.py  test_vm.py
tests/basic/: 01_empty.js  test_array_methods.js  test_closure.js  test_for_in2.js  test_for_in_array.js  test_for_in_simple.js  test_json.js  test_loop_break.js  test_loop_for.js  test_loop_switch.js  test_loop_switch2.js  test_loop_try5.js  test_loop_while.js  test_math.js  test_number_date.js  test_object_methods.js  test_regexp.js  test_string_methods.js  test_try_catch.js  test_try_catch_simple.js
