[project]
name = "microjs"
version = "0.1.0"
description = "A pure Python JavaScript sandbox engine based on MQuickJS"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/simonw/microjs"
Changelog = "https://github.com/simonw/microjs/releases"
Issues = "https://github.com/simonw/microjs/issues"
CI = "https://github.com/simonw/microjs/actions"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
