[project]
name = "micro-javascript"
version = "0.1a1"
description = "A pure Python JavaScript sandbox engine based on MQuickJS"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/simonw/micro-javascript"
Changelog = "https://github.com/simonw/micro-javascript/releases"
Issues = "https://github.com/simonw/micro-javascript/issues"
CI = "https://github.com/simonw/micro-javascript/actions"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "microjs"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
]
